--- a/app/src/main/res/layout/bottom_sheet_events.xml
+++ b/app/src/main/res/layout/bottom_sheet_events.xml
@@ -28,9 +28,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="10dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_action_about_bs" />
 
@@ -38,11 +38,11 @@
             android:id="@+id/aboutBS"
             android:layout_width="match_parent"
 
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15sp"
             android:gravity="center_vertical"
-            android:text="About"
+           android:text="About"
             android:textColor="#666"
             android:textSize="18sp"
             android:typeface="normal"
@@ -57,10 +57,10 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
             android:src="@drawable/ic_action_date" />
 
         <com.thebrownarrow.customfont.CustomFontTextView
@@ -84,9 +84,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="10dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_action_time"
             android:id="@+id/imageView2" />
@@ -113,9 +113,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="10dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
             android:layout_gravity="center_vertical"
             android:adjustViewBounds="true"
 
@@ -144,9 +144,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="10dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_action_views" />
 
@@ -178,9 +178,9 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="10dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_action_alert"
             android:id="@+id/imageView3" />
@@ -208,10 +208,10 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:padding="10dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
             android:src="@drawable/ic_action_venue" />
 
         <com.thebrownarrow.customfont.CustomFontTextView
