--- a/app/src/main/res/layout/bottom_sheet_events.xml
+++ b/app/src/main/res/layout/bottom_sheet_events.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center_vertical"
         android:gravity="center_horizontal"
         android:paddingTop="8sp"
-        android:textColor="#000"
+        android:textColor="#f00"
         android:textSize="20sp"
         android:typeface="normal"
         app:custom_typeface="@string/font_segoue_bold" />
@@ -43,7 +43,7 @@
             android:layout_marginLeft="15sp"
             android:gravity="center_vertical"
            android:text="About"
-            android:textColor="#666"
+            android:textColor="#000"
             android:textSize="18sp"
             android:typeface="normal"
             app:custom_typeface="@string/font_segoue_reg" />
@@ -167,7 +167,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1sp"
+        android:layout_height="0.5sp"
         android:background="#c3666666" />
 
     <LinearLayout
@@ -194,7 +194,7 @@
             android:layout_marginLeft="15sp"
             android:gravity="center_vertical"
             android:text="Set Reminder"
-            android:textColor="#666"
+            android:textColor="#3980eb"
             android:textSize="18sp"
             android:typeface="normal"
             app:custom_typeface="@string/font_segoue_reg" />
@@ -223,7 +223,7 @@
             android:layout_marginLeft="15sp"
             android:gravity="center_vertical"
             android:text="View venue"
-            android:textColor="#666"
+            android:textColor="#3980eb"
             android:textSize="18sp"
             app:custom_typeface="@string/font_segoue_reg" />
     </LinearLayout>
