--- a/app/src/main/res/layout/recyclerview_items_fav_venues.xml
+++ b/app/src/main/res/layout/recyclerview_items_fav_venues.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="10dp">
 
 
@@ -19,7 +20,7 @@
         android:layout_gravity="bottom">
 
 
-        <ImageView
+       <!-- <ImageView
             android:id="@+id/imgVen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,20 +28,20 @@
             android:padding="5dp"
             android:scaleType="fitCenter"
             android:src="@drawable/fire_white_venue" />
+-->
 
 
-        <TextView
+
+        <com.thebrownarrow.customfont.CustomFontTextView
+            app:custom_typeface="@string/font_segoue_bold"
             android:id="@+id/tvVName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/imgVen"
             android:gravity="top"
-            android:paddingBottom="10dp"
-            android:paddingLeft="10dp"
+            android:padding="10sp"
             android:paddingTop="15dp"
             android:textColor="#43b6f4"
-            android:textSize="23sp"
-            android:textStyle="bold" />
+            android:textSize="22sp"/>
         <!-- <ImageView
              android:layout_gravity="center_vertical"
              android:layout_width="20dp"
@@ -52,12 +53,13 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvVName"
 
-            android:layout_marginLeft="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:layout_toRightOf="@+id/imgVen"
-            android:gravity="start"
-
-            android:textColor="#fff"
-            android:textSize="17sp" />
+            android:gravity="center"
+            android:textColor="#000"
+            android:textSize="18sp" />
         <!--    <ImageView
                 android:layout_gravity="center_vertical"
                 android:layout_width="20dp"
@@ -67,7 +69,7 @@
         <Space
             android:id="@+id/sp"
             android:layout_width="match_parent"
-            android:layout_height="15dp"
+            android:layout_height="8dp"
             android:layout_below="@+id/tvVLoc" />
 
         <View
@@ -75,6 +77,12 @@
             android:layout_height="1sp"
             android:layout_below="@+id/sp"
             android:background="#fff" />
+        <Space
+            android:id="@+id/sp1"
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+
+            android:layout_below="@+id/sp" />
     </RelativeLayout>
 
 
