--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,7 +53,7 @@
     <color name="grey">#78909c</color>
     <color name="white">#ffffff</color>
 
-    <color name="testcolor">#2f3948</color>
+    <color name="testcolor">#949494</color>
     <color name="testcoslor">#b9666666</color>
 
 
@@ -82,11 +82,11 @@
     <color name="road">#D9D9D9</color>
     <color name="label">#616161</color>
 
-
+   <color name="colorRouteLine">#FF4081</color>
    <!--kickobar colors-->
    <color name="notkicking">#32cd32</color>
    <color name="slightly">#ffc125</color>
-   <color name="moderate">#ff7f00</color>
-   <color name="kicking">#ff4500</color>
-   <color name="lit">#ee0000</color>
+   <!--<color name="moderate">#ff7f00</color>-->
+   <color name="kicking">#ff7f00</color>
+   <color name="lit">#ff0000</color>
 </resources>
